# Tarui-FE

./: index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: tauri.yml
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: DownloadLedgerModal.jsx  Invoice.jsx  Layout.jsx  LedgerPDFDocument.jsx  Loader.jsx  PublicRoute.jsx  Sidebar.jsx
src/components/Dashboard/: DashboardStats.jsx  LowQuantityProducts.jsx  PayInOut.jsx  RecentTransactions.jsx
src/config/: api.js  helperFunctions.js  vars.js
src/pages/: AddLedger.jsx  Billing.jsx  Dashboard.jsx  Home.jsx  Ledger.jsx  Login.jsx  Signup.jsx
src/pages/BillSetting/: AddSetting.jsx  EditSetting.jsx  index.jsx
src/pages/Ledger/: AddLedger.jsx  EditLedger.jsx  Ledger.jsx  LedgerDetail.jsx
src/pages/Product/: Addproduct.jsx  EditProduct.jsx  ProdcutBreakage.jsx  Product.jsx  ProductDetail.jsx
src/pages/Transaction/: Transaction.jsx  TransactionDetails.jsx  TransactionList.jsx
src/redux/: store.js
src/redux/slices/: authSlice.js  billSettingSlice.js  billingSlice.js  ledgerSlice.js  productSlice.js  statsSlice.js
src/validation-schema/: validation-schemas.js
