[package]
name = "POS_by_Marsols"
version = "0.1.0"
description = "A modern Point-of-Sale (POS) application with comprehensive ledger management, built using Tauri for a lightweight desktop experience, React for an intuitive frontend, and Node.js for a powerful backend — seamlessly deployed via Vercel."
authors = ["Zunair Saeed"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "my_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"


